--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -1,84 +1,77 @@
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px; 
-    padding: 0 20px;
-}
-
-.webName {
-    flex: 1;
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #64b7ff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 0 20px;
 }
 
 .socials {
-    display: flex;
-    flex: 1;
-    justify-content: center;
+  display: flex;
+  flex: 1;
+  justify-content: center;
 }
 
 .logo {
-    display: inline-block;
-    margin: 0 25px;
+  display: inline-block;
+  margin: 0 25px;
 }
 
 .menuToggle {
-    display: none;
-    font-size: 1.5rem;
-    background: transparent;
-    border: none;
-    cursor: pointer;
+  display: none;
+  font-size: 1.5rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 
-    @media (max-width: 768px) {
-        display: block;
-    }
+  @media (max-width: 768px) {
+    display: block;
+  }
 }
 
 .menu {
-    display: flex;
-    flex: 1;
-    justify-content: flex-end;
-    align-items: center;
-    list-style: none;
-    margin: 0;
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  margin: 0;
 }
 
 .menuItem {
-    margin: 0 10px;
-    cursor: pointer;
-    text-decoration: none;
-    color: inherit;
-    font-weight: bold;
+  margin: 0 10px;
+  cursor: pointer;
+  text-decoration: none;
+  /* color: inherit;
+  font-weight: bold; */
 }
 
 .menuItem:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .resumeButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    outline: 0;
-    cursor: pointer;
-    border: none;
-    padding: 0 50px;
-    height: 45px;
-    width: 45px;
-    line-height: 45px;
-    border-radius: 7px;
-    background-color: #64b7ff;
-    color: white;
-    font-weight: 400;  
-    font-size: 16px;
-    box-shadow: 0 4px 14px 0 rgb(0 118 255 / 39%);
-    transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  outline: 0;
+  cursor: pointer;
+  border: none;
+  padding: 0 50px;
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
+  border-radius: 7px;
+  background-color: #64b7ff;
+  color: white;
+  font-weight: 400;
+  font-size: 16px;
+  box-shadow: 0 4px 14px 0 rgb(0 118 255 / 39%);
+  transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
 }
 
 .resumeButton:hover {
-    background: rgba(0, 118, 255, 0.9);
-    box-shadow: 0 6px 20px rgb(0 118 255 / 23%);
+  background: rgba(0, 118, 255, 0.9);
+  box-shadow: 0 6px 20px rgb(0 118 255 / 23%);
 }
