--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -4,6 +4,8 @@
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
+  text-align: center;
+  color: #64b7ff
 }
 
 .headingXl {
@@ -27,8 +29,8 @@
 }
 
 .borderCircle {
-  width: 150px;
-  height: 150px;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   overflow: hidden;
   margin: 0 auto;
