--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 60px;
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .socials {
