--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex: 1;
   justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -31,19 +32,16 @@
 
 .menu {
   display: flex;
-  flex: 1;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
-  list-style: none;
-  margin: 0;
+  border-width:3px;
+  border-color: aquamarine;
+  border-style: solid;
 }
 
 .menuItem {
-  margin: 0 10px;
   cursor: pointer;
   text-decoration: none;
-  /* color: inherit;
-  font-weight: bold; */
 }
 
 .menuItem:hover {
